# monorepo-git-tools

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  extract-lines.sh  git-split.bsc  git-topbase.bsc
.github/: install-git-filter-repo.sh  make-mgt-executable.sh
.github/workflows/: build_and_test.yml  build_test_no_release.yml
die/: Cargo.toml
die/src/: lib.rs
doc/: README.md  build_manpages.sh  changelog.txt  check-updates.md  check.md  gen_check.sh  gen_check_updates.sh  gen_docs.sh  gen_readme.sh  gen_repo_file.sh  gen_split_in.sh  gen_split_in_as.sh  gen_split_out.sh  gen_split_out_as.sh  gen_topbase.sh  gen_verify_rf.sh  readme.template  repo_file.md  repo_file.template  run_docs.sh  split-in-as.md  split-in.md  split-out-as.md  split-out.md  split_in.md  split_out.md  subcommand.template  topbase.md  verify-rf.md
examples/: README.md
exechelper/: Cargo.toml
exechelper/src/: lib.rs
gitfilter/: .gitignore  Cargo.toml  README.md
gitfilter/examples/: gitfiltercli.rs
gitfilter/src/: filter.rs  filter_state.rs  lib.rs
gitfilter/tests/: README.md  gfr-compat.bats  gfr-simple-two.bats  gfr-simple.bats  run_tests.sh
lib/: constants.bsc  filter_repo.bsc  get_arg.bsc  helpers.bsc  split_in.bsc  split_out.bsc  topbase.bsc
lib/constants/: exit_codes.bsc  git_split.bsc  git_topbase.bsc  repo_file.bsc
src/: blob_log_parser.rs  check.rs  check_updates.rs  cli.rs  commands.rs  core.rs  difflog.rs  exec_helpers.rs  git_helpers.rs  git_helpers3.rs  main.rs  repo_file.rs  split.rs  split_in.rs  split_out.rs  sync.rs  topbase.rs  verify.rs
test/: README.md  end-to-end-remote.bats  end-to-end.bats  errors.bats  helpers.bats  run_tests.sh  test.yml  usage.bats
(+22 files in other folders)
