[package]
name = "mgt"
description = "Git tools that enable easy bidirectional sync between multiple repositories"
# please make sure version is always on line 5, otherwise CI will break ¯\_(ツ)_/¯
version = "4.0.0"
authors = ["Nikita Skobov"]
edition = "2018"


[dependencies]
toml =  { version = "0.5.7", features = ["preserve_order"] }
git-url-parse = "0.3.0"
die = { path="die" }
gumdrop = { git = "https://github.com/nikita-skobov/gumdrop", rev = "f29c1f9839329cf5998257e097fc18930255627e" }

[features]
gittests = []
