[package]
name = "mgt"
description = "Git tools that enable easy bidirectional sync between multiple repositories"
# please make sure version is always on line 5, otherwise CI will break ¯\_(ツ)_/¯
version = "4.5.0"
authors = ["Nikita Skobov"]
edition = "2018"


[dependencies]
toml =  { version = "0.5.7", features = ["preserve_order"] }
git-url-parse = "0.3.0"
die = { path="die" }
gumdrop = { git = "https://github.com/nikita-skobov/gumdrop", rev = "7ee4940bd8e6e41d207aa8bf82ba2a80aa82c1c0" }
exechelper = { path = "exechelper" }
gitfilter = { path = "gitfilter" }

[features]
gittests = []
